--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 Hello World
+<html>
+  <head>
+    <title>Carpe Dime</title>
+  </head>
+  <body>
+    <p>you only live once</p>
+  </body>
+</html>  
