--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ Hello World
 <html>
   <head>
     <title>Carpe Dime</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <p>you only live once</p>
