--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ Hello World
   </head>
   <body>
     <p>you only live once</p>
-  </body>
+    <img src="131582-carpe-diem-quotes.jpg" style="width:787px;height:787px;">
+    </body>
 </html>  
