--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-Hello World
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Carpe Dime</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
