--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/><link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
+    <link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
     <title>Carpe Dime</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
